# sEMG-TypingDatabase

./: Dockerfile  README.md  install.sh  install_using_poetry.sh  prepare_data.sh  pyproject.toml  requirements.txt  setup.py
ClassificationResults/: press_counts.csv
ClassificationResults/Results/: ResultsSummary.xlsx
ClassificationResults/Results/CrossParticipant_classification/: ClassificationResult.csv
ClassificationResults/Results/CrossTest_classification/: ClassificationResult.csv
ClassificationResults/Results/Feature_classification/: ClassificationResult.csv
ClassificationResults/Results/Window_classification/: ClassificationERRORS.csv  ClassificationResult.csv
CleanData/P1/T1/: LAG_TIMINGS.csv
CleanData/P1/T2/: Keylogs.txt  LAG_TIMINGS.csv
CleanData/P11/T1/: Keylogs.txt  LAG_TIMINGS.csv
CleanData/P12/T1/: Keylogs.txt  LAG_TIMINGS.csv
CleanData/P14/T1/: Keylogs.txt
CleanData/P14/T2/: Keylogs.txt  LAG_TIMINGS.csv
CleanData/P16/T2/: Keylogs.txt
CleanData/P17/T1/: Keylogs.txt  LAG_TIMINGS.csv
CleanData/P3/T2/: Keylogs.txt  (+1 more)
Code/: Classify.py  classify_root.py  load_intan_rhd_format.py
Code/.ipynb_checkpoints/: FeatureAnalysis-checkpoint.ipynb  Plotting-checkpoint.ipynb  Untitled-checkpoint.ipynb
Code/intanutil/: data.py  report.py
keypressemg/: extract.py  slice.py  train_mlp_between_days.py  train_mlp_split_day.py  train_svm_between_days.py  train_svm_split_day.py  train_utils.py  user_features.py  validate.py
keypressemg/common/: folder_paths.py  types_defined.py  utils.py
keypressemg/data_prep/: extract.py  slice.py  user_features.py  validate.py
keypressemg/dataset_create/: window_datasets.py
keypressemg/datasets/: split_between_days_dataset.py  split_same_day_dataset.py  utils.py
keypressemg/experiments_read/: experiment.py  experiment_reader.py  rhd_file.py  utils.py
keypressemg/fl_trainers/: trainer_FedAvg_between_days.py  trainer_FedAvg_split_day.py  trainer_FedPer_between_days.py  trainer_FedPer_split_day.py  utils.py
keypressemg/intanutil/: header.py
keypressemg/log/: feature_results.txt
keypressemg/models/: emg_key_press_classifier.py  feature_model.py  nn_blocks.py  utils.py
keypressemg/not_used_code/: svm_trains.py  train.py  train_in_memory.py  train_same_user_same_day.py
keypressemg/sweeps/: sweep_FedAvg_between_days.py  sweep_FedAvg_split_day.py  sweep_FedPer_between_days.py  sweep_FedPer_split_day.py  sweep_utils.py
keypressemg/trainers/: train_mlp_between_days.py  train_mlp_split_day.py  train_svm_between_days.py  train_svm_split_day.py  utils.py
keypressemg/window_prepare/: feature_window.py  window_slice.py
(+2046 files in other folders)
