[tool.poetry]
name = "keypressemg"
version = "0.1.0"
description = "This repository contains code for a dataset containing sEMG data"
authors = [
    "Jose Zariffa <jose.zariffa@utoronto.ca>",
    "Ethan Fetaya <ethan.fetaya@biu.ac.il>",
    "Idan Achituv <idan.achituve@biu.ac.il>",
    "Jonathan Eby <jon.eby@mail.utoronto.ca>",
    "Moshe Beutel <beutelm@biu.ac.il"]
repository = "https://github.com/ANSLab-UHN/sEMG-TypingDatabase"
readme = "README.md"
packages =[
    {include = 'keypressemg'},
    {include = 'data_prep', from = 'keypressemg'},
    {include = "intanutil", from = "keypressemg/data_prep"},
    {include = 'experiments_read', from = 'keypressemg/data_prep'},
    {include = 'window_prepare', from = 'keypressemg/data_prep'},
    {include = 'common', from = 'keypressemg'},
    {include = 'datasets', from = 'keypressemg'},
    {include = 'models', from = 'keypressemg'},
    {include = 'trainers', from = 'keypressemg'},
    {include = 'sweeps', from = 'keypressemg'},
    {include = 'fl_trainers', from = 'keypressemg'}
]


[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^2.0.3"
matplotlib = "^3.7.5"
statsmodels = "^0.14.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.2"
torch = "^2.3.0"
tqdm = "^4.66.4"
wandb = "^0.17.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
